--- a/index.html
+++ b/index.html
@@ -357,6 +357,11 @@
         background-color: #aa0000 !important;
         border-color: #440000 !important;
     }
+    .transring{
+        position: absolute;
+        top: 5px;
+        left: 165px;
+    }
 	</style>
 </head>
 <body onload="sine();">
@@ -399,7 +404,7 @@
 </span>
 <br>
 <a href='https://stellaring.network/' class='stellar'>this site is a part of the <b>stellaring</b> webring :3</a>
- 
+
 </div>
 
     <div class='FC2 side'>
@@ -418,9 +423,12 @@
 <wii-ring site="https://miastonished.github.io" variant="wii-mini"></wii-ring>
 </div>
 
+<span class='transring' id="transring">
+</span>
+
   <h3> -- EPILEPSY WARNING -- </h3>
   this site contians a large amount of fast moving and flashing gifs and elements<br>
-  as well as some screen shakes<br>
+  as well as potential screenshakes and matureish themes kinda<br>
   if you have photosensitive epilepsy then probably don't be on this site soz
   
   <h3>-- NEWS / CHANGELOG --</h3>
@@ -821,3 +829,7 @@ function sine(){
 </script>
 
 <script src="https://neocities.jeith.com/assets/wii-ring.js"></script>
+
+
+<script type="text/javascript" src="https://transring.neocities.org/onionring-variables.js"></script>
+<script type="text/javascript" src="https://transring.neocities.org/onionring-widget.js"></script>
