comments and contact

--- a/contact.html
+++ b/contact.html
@@ -1,1 +1,5 @@
-@miastonished on discord
+<h3> HAIII </h3>
+<br>
+miaaa@duck.com &lt;--- thats my email :3
+<br><br>
+<a href='aboutthem.html'> &lt;&lt;&lt; BACK </a>
