--- a/buttons.html
+++ b/buttons.html
@@ -149,7 +149,7 @@ click on a button to go to the respective site :3 <br><br>
 <a href='https://skysupercharged.github.io' target='_blank'><img src='assets/buttons/sky.png'></a>
 <a href='https://vaelaris.github.io' target='_blank'><img src='assets/buttons/vae.png'></a>
 <a href="https://hiyaderred.github.io/"><img src="https://hiyaderred.github.io/images/webring/derredbutton.png"></a>
-<a class='button88x31' href="https://xzan-corvus.github.io/XzanCorvusEnterprises/"><img src="assets/buttons/xzan_proto.gif"></a>
+<a class='button88x31' href="https://xzan-corvus.github.io/"><img src="assets/buttons/xzan_proto.gif"></a>
 <a class='button88x31' href="https://fabledbugs.github.io/"><img src="assets/buttons/bugs.png"></a>
 
 
@@ -193,8 +193,11 @@ click on a button to go to the respective site :3 <br><br>
 <a href="https://dimden.dev/"><img src="https://dimden.dev/images/88x31.gif"></a>
 <a href="https://doqmeat.neocities.org"><img src="assets/buttons/doqmeat.png"></a>
 <a href="https://sugarforbrains.neocities.org/"><img src="assets/buttons/sugar.gif"></a>
-
-<a class=' emptbutt'></a>
+<a href="https://f00l1shw0rmz.neocities.org/"><img src="assets/buttons/foolish.gif"></a>
+<a href="https://bambosh.dev/unofficial-homestuck-collection/"><img src="assets/buttons/sburb.gif"></a>
+<!-- Sburb button taken from https://itzzcode.github.io/?oldsite=true -->
+<a href="https://tamanotchi.world/"><img src="assets/buttons/tamanotchi.gif"></a><a class=' emptbutt'></a>
+<a href="https://friendl-e-duck.neocities.org"><img src="assets/buttons/fed.gif"></a><a class=' emptbutt'></a>
 <a class=' emptbutt'></a>
 <a class=' emptbutt'></a>
 <a class=' emptbutt'></a>
