--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
         outline-width:0px;
         border-radius: 0px;
         transition: top 0.2s;
+        margin: 0px;
     }
     .buttonlink  {
         width: 712px;
@@ -63,10 +64,14 @@
         padding: 0px;
         top: 0px;
         transform: scale(1);
+        color: red;
         border-width: 0px;
         outline-width:0px;
         border-radius: 0px;
         font-size: 40px;
+        display: inline-block;
+        background-color: #600;
+        
     }    
     .buttonlink:hover{
         border-width:0px; top:0px;
@@ -294,55 +299,7 @@
         border: none;
         padding:0px;
     }
-    #HCB_comment_box{
-        background-color: #454545;
-        background-image: url('assets/img/lavadark.png');
-        background-size: 64px;
-		width: 700px;
-        height: auto !important;
-		border-radius: 25px 25px 25px 25px;
-        border-style: none none solid none;
-        border-width: 10px;
-        border-color: #000;
-		padding-top: 10px;
-		padding-bottom: 10px;
-        image-rendering: -moz-crisp-edges;
-        image-rendering: -o-crisp-edges;
-        image-rendering: -webkit-optimize-contrast;
-        image-rendering: pixelated;
-        -ms-interpolation-mode: nearest-neighbor;
-    }
-    #HCB_comment_box > * > form {
-        width: 600px;
-    }
-    #HCB_comment_box > a {
-        width: 50px;
-        padding: 0px;
-        margin: auto;
-    }
-    .home-desc > a {
-        background: none;
-        border: none;
-        padding: 0px;
-    }
-    .admin-link{
-        display:none;
-    }
-    .btn-secondary{
-        display:none !important;
-    }
-    #comments_list {
-        padding:5px;
-		background-color: #000;
-		width: 500px;
-		border-radius: 25px 25px 25px 25px;
-        border-style: solid none none none;
-        border-width: 10px;
-        border-color: #400;
-        margin: auto;
-        position: relative;
-        top: -30px;
-    }
+
     .bannerMain{
         width: 400px;
         position: relative;
@@ -357,10 +314,48 @@
         background-color: #aa0000 !important;
         border-color: #440000 !important;
     }
+    .piercing{
+        border-radius: 10px 50px 10px 10px;
+        border-width: 4px;
+        border-style: solid;
+        background-color: #000;
+        border-color: #440000;
+        width: 136px;
+        position: absolute; top: 5px; right: 5px;
+        height: 141.933px;
+        padding: 6px 8px;
+    }
     .transring{
         position: absolute;
+        top: 6px;
+        left: 170px;
+        border-radius: 5px;
+        border-width: 4px;
+        border-style: solid;
+        background-color: #000;
+        border-color: #440000;
+    }
+    .comment-button {
+        display: inline-block;
+        position: absolute;
+        font-size: 30px;
         top: 5px;
-        left: 165px;
+        right: 170px;
+        color: #a00;
+        background-color: #200;
+        width: 168px;
+        height: 39px;
+        border-radius: 5px;
+    
+        border-width: 4px;
+        border-style: solid;
+        border-color: #440000;
+    }
+    .comment-button:hover{
+        top:5px;
+        border-width: 4px;
+                border-style: solid;
+
     }
 	</style>
 </head>
@@ -423,8 +418,12 @@
 <wii-ring site="https://miastonished.github.io" variant="wii-mini"></wii-ring>
 </div>
 
-<span class='transring' id="transring">
-</span>
+<div class="piercing">
+</div>
+
+<span class='transring' id="transring"></span>
+<a href='comments.html' class='comment-button'>"Guestbook"</a>
+
 
   <h3> -- EPILEPSY WARNING -- </h3>
   this site contians a large amount of fast moving and flashing gifs and elements<br>
@@ -468,6 +467,9 @@
   and added some links, including one to that page, to my about me :3
   <tr><th>11/03/2024</th><td>-</td><td><span>finished lock A01</span></td></tr>
   <tr><th>13/03/2024</th><td>-</td><td><span>added the wii-ring :3 and moar button<s>z</s> x3</span></td></tr>
+  <tr><th>23/03/2024</th><td>-</td><td><span>moved the comments from the main page to reduce lag :3 (see the "Guestbook" button at the top), added some more buttons to buttons.html and did some css cleanup of this page slightly only a bit<br>
+  also made contact.html more somethingy<br>
+  </span></td></tr>
 
   </span></td></tr>
   
@@ -497,16 +499,7 @@ Bugs and stuff can be reported to me (Contact is on about me (not yet im working
 <div class="tumblr-post-thing">
 <div class="tumblr-post" data-href="https://embed.tumblr.com/embed/post/Bv3d9F2Ebo9-KItRNAH4xw/701242285150650368" data-language="hi_IN"><a href="https://awnemia.tumblr.com/post/701242285150650368/mia-is-it-true-that-you-are-the-developer-of-the">LOADING TEH EPIX TUMBLAH POSTZ &lt;W&gt;</a></div>  <script async src="https://assets.tumblr.com/post.js"></script>
 </div>
-<br>
-<br>
 
-<!-- begin wwww.htmlcommentbox.com -->
- <div id="HCB_comment_box"><a href="http://www.htmlcommentbox.com">Comment Box</a> is loading comments...</div>
- <link rel="stylesheet" type="text/css" href="https://www.htmlcommentbox.com/static/skins/bootstrap/twitter-bootstrap.css?v=0" />
- <script type="text/javascript" id="hcb"> /*<!--*/ if(!window.hcb_user){hcb_user={};} (function(){var s=document.createElement("script"), l=hcb_user.PAGE || (""+window.location).replace(/'/g,"%27"), h="https://www.htmlcommentbox.com";s.setAttribute("type","text/javascript");s.setAttribute("src", h+"/jread?page="+encodeURIComponent(l).replace("+","%2B")+"&mod=%241%24wq1rdBcg%24Kbllf4aeaSytdFx6u25UL1"+"&opts=16798&num=10&ts=1701235357978");if (typeof s!="undefined") document.getElementsByTagName("head")[0].appendChild(s);})(); /*-->*/ </script>
-<!-- end www.htmlcommentbox.com -->
-
-<br>
 
 <div class = "sinettings">
 <h1>Sine wave controls</h1>
@@ -622,7 +615,7 @@ slider1.oninput = function() {
 <br>
 <a class='button88x31' href='miasepicsite/' target='_blank'><img src='assets/art/placeholderbutton.gif'></a>
 <a class='button88x31' href="https://hiyaderred.github.io/"><img src="https://hiyaderred.github.io/images/webring/derredbutton.png"></a>
-<a class='button88x31' href="https://xzan-corvus.github.io/XzanCorvusEnterprises/"><img src="assets/buttons/xzan_proto.gif"></a>
+<a class='button88x31' href="https://xzan-corvus.github.io/"><img src="assets/buttons/xzan_proto.gif"></a>
 <a class='button88x31' href="https://fabledbugs.github.io/"><img src="assets/buttons/bugs.png"></a>
 
 <br>
