fixed the comments

--- a/buttons.html
+++ b/buttons.html
@@ -196,8 +196,10 @@ click on a button to go to the respective site :3 <br><br>
 <a href="https://f00l1shw0rmz.neocities.org/"><img src="assets/buttons/foolish.gif"></a>
 <a href="https://bambosh.dev/unofficial-homestuck-collection/"><img src="assets/buttons/sburb.gif"></a>
 <!-- Sburb button taken from https://itzzcode.github.io/?oldsite=true -->
-<a href="https://tamanotchi.world/"><img src="assets/buttons/tamanotchi.gif"></a><a class=' emptbutt'></a>
-<a href="https://friendl-e-duck.neocities.org"><img src="assets/buttons/fed.gif"></a><a class=' emptbutt'></a>
+<a href="https://tamanotchi.world/"><img src="assets/buttons/tamanotchi.gif"></a>
+<a href="https://friendl-e-duck.neocities.org"><img src="assets/buttons/fed.png"></a>
+<a class=' emptbutt'></a>
+<a class=' emptbutt'></a>
 <a class=' emptbutt'></a>
 <a class=' emptbutt'></a>
 <a class=' emptbutt'></a>
