--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
 
 <span class='transring' id="transring"></span>
 
-<a href='javascript:commentsletsgo();' class='comment-button'>"Guestbook"</a>
+<a href='comments.html' class='comment-button'>"Guestbook"</a>
 
 
   <h3> -- EPILEPSY WARNING -- </h3>
@@ -470,7 +470,8 @@
   <tr><th>13/03/2024</th><td>-</td><td><span>added the wii-ring :3 and moar button<s>z</s> x3</span></td></tr>
   <tr><th>23/03/2024</th><td>-</td><td><span>moved the comments from the main page to reduce lag :3 (see the "Guestbook" button at the top), added some more buttons to buttons.html and did some css cleanup of this page slightly only a bit<br>
   also made contact.html more somethingy<br>
-  (SUB UPDATE): turns out that the html comments thing doesn't like being on a seperate page so uh did some fucky wucky shit that i hate doing to make it work
+  (SUB UPDATE): turns out that the html comments thing doesn't like being on a seperate page so uh did some fucky wucky shit that i hate doing to make it working
+  (SUB SUB UPDATE): nvm i found a way better way to fix it :3
   </span></td></tr>
 
   </span></td></tr>
@@ -824,8 +825,8 @@ function sine(){
 
 </script>
 
-
-<script type="text/javascript" src="comments.js"></script>
+<!--
+<script type="text/javascript" src="comments.js"></script>-->
 <script src="https://neocities.jeith.com/assets/wii-ring.js"></script>
 
 
