--- a/aboutme.html
+++ b/aboutme.html
@@ -3,6 +3,7 @@
     About Me - Mia's EPIC Site
     </title>
 	<meta name="description" content="About me!!!!!!!!!!!!">
+    <link rel="icon" type="image/png" href="assets/icons/aboutme.png"/>
 	<script>
 	console.log("%cwhy are you so silly!?!?!?", "font-size:4rem;background-image: repeating-linear-gradient(45deg,#55CDFC,#55CDFC 50px,#F7A8B8 50px,#F7A8B8 100px,#FFFFFF 100px,#FFFFFF 150px,#F7A8B8 150px,#F7A8B8 200px,#55CDFC 200px);");
 	</script>
@@ -145,7 +146,7 @@
         width:250px;
         position: absolute;
         right: 240px; 
-        top: 280px;
+        top: 290px;
         transform: rotate(-2deg);
     }    
     .ct{
@@ -187,6 +188,9 @@
     .rightarea{
         float: right;
         } 
+    .leftarea{
+        float: left;
+        } 
 	</style>
 </head>
 <body>
@@ -194,7 +198,7 @@
 <div> <!--class="header"--->
 	<center>
 	<h1> About Me </h1>
-	<a href="index.html" class="links"> Main Page </a> ​ ​ ​<a href="games.html" class="links"> Games </a> ​ ​ ​<a href="code.html" class="links"> Random Code Stuff </a> ​ ​ ​<a href="aboutthem.html" class="links"> About Me </a> ​ ​ ​<a href="pride.html" class="links">PRIDEEE FLAGGSSSSSS</a>
+	<a href="index.html" class="links"> Main Page </a> ​ ​ ​<a href="games.html" class="links"> Games </a> ​ ​ ​<a href="code.html" class="links"> Random Code Stuff </a> ​ ​ ​<a href="aboutthem.html" class="links"> About Me? </a> ​ ​ ​<a href="pride.html" class="links">PRIDEEE FLAGGSSSSSS</a>
 	<!-- <script src="links.js" type="text/javascript"></script>	</center> -->
 	<br>
 </div>
@@ -203,8 +207,9 @@
 <br>
 <br>
 <p class="p1">Hi im Mia, I go by she/they pronouns so if you ever want to talk about me behind my back now you know :3</p>
-<p class="p3">my gender is ninety nine point nine (followed by twelve duodecillion to the power of ten to the power of one hundered nines and then a 7) percent girl and the remainder is several mispellings of girl</p> 
-<p class="p1">Thats all you need to know ig</p>s
+<p class="p3">my gender is ninety nine point nine (followed by twelve duodecillion to the power of ten to the power of one hundered nines and then a 7) percent girl and the remainder is several thousandish mispellings of girl</p> 
+<p class="p1">Thats all you need to know ig</p>
+<!-- <p class="p1">oh wait yea I'm pansexual and polyamorous with a preference for trans people :3 :333333</p>-->
 <div class="yt"><a class="yt" href="https://www.youtube.com/@miastonished"> My Youtube </a></div>
 <div class="tm"><a class="tm" href="https://awnemia.tumblr.com/"> My Tumblr </a></div>
 <div class="bt"><a class="bt" href="butter.png"> Butter Images </a></div>
@@ -221,12 +226,21 @@
 
 <div class="biggap"> </div>
 
+<div class='leftarea'>
+<a href='https://yesterweb.org/'><img src='assets/img/yesterweb.png' width="180"></a>
+<img src='assets/img/jtk.jpg'> 
+<img src='assets/img/miracle.gif'> 
+</div>
+
 <div class='rightarea'>
 
+<img src='assets/img/stauber.webp'> 
 <a href='http://www.mabsland.com/Adoption.html'><img src='assets/img/Censor_14a.gif'/></a>
 <iframe width="180" height="180" style="border:none" src="https://dimden.neocities.org/navlink/" name="neolink"></iframe>
 
 </div>
+
+
 <br>
 
 <div class="footer2">
