--- a/aboutthem.html
+++ b/aboutthem.html
@@ -132,7 +132,7 @@
 <marquee behavior=alternate direction=down scrollamount=3 scrolldelay=18 height=600 style='position:absolute; left:38%; top:10px; width:44; height:600px;'><img src=http://dl4.glitter-graphics.net/pub/2248/2248634qm4sedfzwd.jpg border=0 class="monstercan"/></marquee>
 <marquee behavior=alternate direction=down scrollamount=5 scrolldelay=29 height=637 style='position:absolute; left:66%; top:137px; width:44; height:637px;'><img src=http://dl4.glitter-graphics.net/pub/2248/2248634qm4sedfzwd.jpg border=0 class="monstercan"/></marquee>
 <marquee behavior=alternate direction=down scrollamount=100 scrolldelay=0 height=694 style='position:absolute; left:52%; top:177px; width:44; height:694px;'><img src=http://dl4.glitter-graphics.net/pub/2248/2248634qm4sedfzwd.jpg border=0 class="monstercan"/></marquee>
-<marquee behavior=alternate direction=down scrollamount=5 scrolldelay=43 height=501 style='position:absolute; left:80%; top:164px; width:44; height:501px;'><img src=http://dl4.glitter-graphics.net/pub/2248/2248634qm4sedfzwd.jpg border=0 class="monstercan"/></marquee>
+<!--<marquee behavior=alternate direction=down scrollamount=5 scrolldelay=43 height=501 style='position:absolute; left:80%; top:164px; width:44; height:501px;'><img src=http://dl4.glitter-graphics.net/pub/2248/2248634qm4sedfzwd.jpg border=0 class="monstercan"/></marquee>
 <marquee behavior=alternate direction=down scrollamount=3 scrolldelay=26 height=594 style='position:absolute; left:74%; top:17px; width:44; height:594px;'><img src=http://dl4.glitter-graphics.net/pub/2248/2248634qm4sedfzwd.jpg border=0 class="monstercan"/></marquee>
 <marquee behavior=alternate direction=down scrollamount=6 scrolldelay=11 height=533 style='position:absolute; left:86%; top:130px; width:44; height:533px;'><img src=http://dl4.glitter-graphics.net/pub/2248/2248634qm4sedfzwd.jpg border=0 class="monstercan"/></marquee>
 <marquee behavior=alternate direction=down scrollamount=2 scrolldelay=44 height=605 style='position:absolute; left:66%; top:24px; width:44; height:605px;'><img src=http://dl4.glitter-graphics.net/pub/2248/2248634qm4sedfzwd.jpg border=0 class="monstercan"/></marquee>
@@ -154,6 +154,7 @@
 <marquee behavior=alternate direction=down scrollamount=1 scrolldelay=25 height=666 style='position:absolute; left:63%; top:12px; width:44; height:666px;'><img src=http://dl4.glitter-graphics.net/pub/2248/2248634qm4sedfzwd.jpg border=0 class="monstercan"/></marquee>
 <marquee behavior=alternate direction=down scrollamount=5 scrolldelay=25 height=533 style='position:absolute; left:37%; top:130px; width:44; height:533px;'><img src=http://dl4.glitter-graphics.net/pub/2248/2248634qm4sedfzwd.jpg border=0 class="monstercan"/></marquee>
 <marquee behavior=alternate direction=down scrollamount=6 scrolldelay=43 height=658 style='position:absolute; left:57%; top:42px; width:44; height:658px;'><img src=http://dl4.glitter-graphics.net/pub/2248/2248634qm4sedfzwd.jpg border=0 class="monstercan"/></marquee>
+-->
 <div class="sidebar">
 <br>
 <center>
@@ -184,11 +185,13 @@ hi im  MIA<br>
 <span style="text-decoration: none"><font color=#ff0000>H</font><font color=#f81206>e</font><font color=#f2250c>y</font><font color=#ec3712>~</font> <font color=#df5b1f>a</font><font color=#d96c25>l</font><font color=#d37c2b>l</font><font color=#cd8c31>!</font> <font color=#c0aa3e>W</font><font color=#bab744>e</font><font color=#b4c44a>l</font><font color=#aecf50>c</font><font color=#a7d957>o</font><font color=#a1e25d>m</font><font color=#9bea63>e</font> <font color=#8ff66f>t</font><font color=#88fa76>o</font> <font color=#7cfe82>m</font><font color=#76fe88>y</font> <font color=#69fa95>W</font><font color=#63f69b>e</font><font color=#5df1a1>b</font> <font color=#50e2ae>S</font><font color=#4ad9b4>i</font><font color=#44ceba>t</font><font color=#3ec3c0>e</font> <font color=#31a9cd>n</font><font color=#2b9bd3>y</font><font color=#258bd9>a</font><font color=#1f7bdf>~</font> <font color=#125aec>></font><font color=#0c48f2>o</font><font color=#0636f8><</font></span>
 <p class="p1">Hi im 	<img src="assets/img/mia.gif" width="100" height="100"></img></p>
 <p class="p1">Thats all you need to know iNO IT ISN'T NO IT ISN'T NO IT ISN'T NO IT IIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIg</p>
-<p class="p1">I'm a goth-kawaii gal that loves to draw and codee~~</p>
-<p class="p1"><a href="TheReal"> My Youtube </a></p>
-<p class="p1"><a href="https://miastonished.tumblr.com"> My Tumblr XP</a></p>
-<p class="p1"><a href="https://miastonished.tumblr.com"> My... MYSPACE!!!</a></p>
+<p class="p1">I'm a goth-kawaii gal that loves to draw and codee!!!!</p>
+<!--<p class="p1"><a href="TheReal"> My Youtube </a></p>-->
+<p class="p1"><a href="TheReal"> My Tumblr XP</a></p>
+<p class="p1"><a href="https://awnemia.tumblr.com"> My... MYSPACE!!!</a></p>
 <p class="p1"><a href="https://blingee.com/profile/egodeath"> My Blingee</a></p>
+<img src='assets/img/sex.png'> 
+<img src='assets/img/cannibal.jpg'> 
 <br>
 </div>
 <br>
@@ -216,6 +219,7 @@ hi im  MIA<br>
 
 <br>
 <p class="p1"><span title="in a freak accident involving 14 casualties and 12 injured 🙁">got sillied)got sillied)got sillied)got sillied)got sillied)got sillied)</span></p> 
+<h1> TW: SH </h1>
 <img src="https://dl.glitter-graphics.com/pub/1220/1220232mf765wb761.jpg" width="100%" height="50%"/>
 <div class="aboutme">
 <h1> Here Are Some things About me </h1>
