--- a/code.html
+++ b/code.html
@@ -3,6 +3,7 @@
     Random Code - Mia's EPIC Site
     </title>
 	<meta name="description" content="Random things">
+    <link rel="icon" type="image/png" href="assets/icons/code.png"/>
 	<style>
 	html, body {margin:0;padding:0;}
 	.header {background-image:linear-gradient(#2a8000, rgba(0, 0, 0, 0))}
@@ -115,6 +116,8 @@
 <a href="javascript:void(function(){ b = prompt('how many degrees? (99 is rlly cool)', '1'); for (let i = 0; i < document.all.length; i++) { try{ document.all[i].style.transform='rotate('+b+'deg)'} catch{} } })();">Page Rotater</a>(takes a second)
 <br>
 <a href="javascript:void(function(){ b = prompt('how round?', '15'); for (let i = 0; i < document.all.length; i++) { try{ document.all[i].style.borderRadius=b+'px'} catch{} } })();">Corner Rounder</a>(also takes a second)
+<br>
+<a href="whiteOverlay.user.js">White Overlay</a>(Userscript, adds an annoying white gradient over every page, inspired by Xbox 360)
 
 <!-- document.all.style.transform='rotate('+b+'deg)' ||null; -->
 <br><br>
