--- a/comments.html
+++ b/comments.html
@@ -83,6 +83,7 @@
  <script type="text/javascript" id="hcb"> /*<!--*/ if(!window.hcb_user){hcb_user={};} (function(){var s=document.createElement("script"), l=hcb_user.PAGE || ("https://miastonished.github.io/").replace(/'/g,"%27"), h="https://www.htmlcommentbox.com";s.setAttribute("type","text/javascript");s.setAttribute("src", h+"/jread?page="+encodeURIComponent(l).replace("+","%2B")+"&mod=%241%24wq1rdBcg%24Kbllf4aeaSytdFx6u25UL1"+"&opts=16798&num=10&ts=1701235357978");if (typeof s!="undefined") document.getElementsByTagName("head")[0].appendChild(s);})(); /*-->*/ </script>
 <!-- end www.htmlcommentbox.com -->
 
+<a href='grave.html'> <h1>==&gt;</h1> </a>
 
 </center>
 </body>
