--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
     Mia's EPIC Site
     </title>
 	<meta name="description" content="This site is very epic!">
-    <link href="osd.xml" rel="search" title="Miastonished" type="application/opensearchdescription+xml">
+    <link href="osd.xml" rel="search" title="Miastonished" type="application/opensearchdescription+xml"/>
+    <link rel="icon" type="image/png" href="assets/icons/index.png"/>
 	<script>
 	function title(){
 		document.title = ""+Math.round(Math.random())+Math.round(Math.random())+Math.round(Math.random())+Math.round(Math.random())+Math.round(Math.random())+" Mia's EPIC Site "+Math.round(Math.random())+Math.round(Math.random())+Math.round(Math.random())+Math.round(Math.random())+Math.round(Math.random());
@@ -41,7 +42,7 @@
         border-color: #a00;
         transition: border-width 0.1s, top 0.1s;
     }
-    a:hover{border-width:0px; top:4px;}
+    .links:hover{border-width:0px; top:4px;}
     .stellar:hover{border-width:6px; width:800px; top:0px;}
     .button88x31:hover{border-width:0px; top:2.5px;}
     
@@ -433,8 +434,9 @@
   
   <h3>-- NEWS / CHANGELOG --</h3>
   <table class="newstable">
-  <div class="topshelfspyvoiceline"><tr><th>Date</th><td></td><td>Update</td></tr></div>
-  <tr><th>19/06/2021</th><td>-</td><td>I made this coooool website</td></tr>
+  <div class="topshelfspyvoiceline"><tr><th>
+    <a href='rss.xml'><img src='assets/img/rss.png'/></a> Date</th><td></td><td>Update</td></tr></div>
+  <tr><th>19/06/2021</th><td>-</td><td>I made this coooool website </td></tr>
   <tr><th>19/10/2021</th><td>-</td><td>i fixed the bug on the random code page with the timestamp thing</td></tr>
   <tr><th><p title="Im really sorry its not the 19th i was just bored">2/02/2022</p></th><td>-</td><td><p title="REAL?!?!?!?! OMG but only on this page for now cause im a silly">CSS?!?!?!??!!?!??!!!? WHAT?!?!!!! REAL?!?!?!?!!?!?!</p></td></tr>
   <tr><th>3/02/2022</th><td>-</td><td>gave random code page css and scroll thingy</td></tr>
@@ -466,16 +468,23 @@
   <tr><th>09/03/2024</th><td>-</td><td><span>did a visual overhaul of the top of the main page and added some more buttons
   <br> also added a page where you can view the buttons i've made<br>
   and added some links, including one to that page, to my about me :3
+  </span></td></tr>
+ 
   <tr><th>11/03/2024</th><td>-</td><td><span>finished lock A01</span></td></tr>
   <tr><th>13/03/2024</th><td>-</td><td><span>added the wii-ring :3 and moar button<s>z</s> x3</span></td></tr>
   <tr><th>23/03/2024</th><td>-</td><td><span>moved the comments from the main page to reduce lag :3 (see the "Guestbook" button at the top), added some more buttons to buttons.html and did some css cleanup of this page slightly only a bit<br>
   also made contact.html more somethingy<br>
   (SUB UPDATE): turns out that the html comments thing doesn't like being on a seperate page so uh did some fucky wucky shit that i hate doing to make it working
-  (SUB SUB UPDATE): nvm i found a way better way to fix it :3
+  <br>(SUB SUB UPDATE): nvm i found a way better way to fix it :3
+  </span></td></tr>
+  <tr><th>25/07/2024</th><td>-</td><td><span>
+    officially added an RSS feed (haiii if you're reading this there)<br>
+    redid games.html so that they're icons instead of itch.io embeds, and added a favico (FINALLY) to the main 4 pages.<br>
+    added some misc stuff to aboutme and its alt page (which now has a hint towards getting there)<br>
+    added a new glomble to random code stuff, and ofc a few more buttons to the buttons pages<br>
+    fixed some dead links, removed one unused file, and added one secret page  
   </span></td></tr>
 
-  </span></td></tr>
-  
   
   <tr><th></th><td></td><td></td></tr>
   </table>
@@ -617,7 +626,7 @@ slider1.oninput = function() {
 <a class='button88x31' href='https://vaelaris.github.io' target='_blank'><img src='assets/buttons/vae.png'></a>
 <br>
 <a class='button88x31' href='miasepicsite/' target='_blank'><img src='assets/art/placeholderbutton.gif'></a>
-<a class='button88x31' href="https://hiyaderred.github.io/"><img src="https://hiyaderred.github.io/images/webring/derredbutton.png"></a>
+<a class='button88x31' href="https://hiyajemma.github.io/"><img src="https://hiyajemma.github.io/images/webring/derredbutton.png"></a>
 <a class='button88x31' href="https://xzan-corvus.github.io/"><img src="assets/buttons/xzan_proto.gif"></a>
 <a class='button88x31' href="https://fabledbugs.github.io/"><img src="assets/buttons/bugs.png"></a>
 
