--- a/john.html
+++ b/john.html
@@ -105,6 +105,7 @@
 <a href='http://hrgiger.com/'>
     <img src='assets/buttons/giger.jpg'/>
 </a>
+<a href="https://gamebanana.com/mods/505001"><img src="https://gamebanana.com/mods/embeddables/505001?type=large"/></a>
 <a href='https://www.youtube.com/watch?v=AgiYLtBOZC8'>cool song</a>
 
 <script>
