--- a/buttons.html
+++ b/buttons.html
@@ -148,7 +148,7 @@ click on a button to go to the respective site :3 <br><br>
 
 <a href='https://skysupercharged.github.io' target='_blank'><img src='assets/buttons/sky.png'></a>
 <a href='https://vaelaris.github.io' target='_blank'><img src='assets/buttons/vae.png'></a>
-<a href="https://hiyaderred.github.io/"><img src="https://hiyaderred.github.io/images/webring/derredbutton.png"></a>
+<a href="https://hiyajemma.github.io/"><img src="https://hiyajemma.github.io/images/webring/derredbutton.png"></a>
 <a class='button88x31' href="https://xzan-corvus.github.io/"><img src="assets/buttons/xzan_proto.gif"></a>
 <a class='button88x31' href="https://fabledbugs.github.io/"><img src="assets/buttons/bugs.png"></a>
 
@@ -198,8 +198,12 @@ click on a button to go to the respective site :3 <br><br>
 <!-- Sburb button taken from https://itzzcode.github.io/?oldsite=true -->
 <a href="https://tamanotchi.world/"><img src="assets/buttons/tamanotchi.gif"></a>
 <a href="https://friendl-e-duck.neocities.org"><img src="assets/buttons/fed.png"></a>
-<a class=' emptbutt'></a>
-<a class=' emptbutt'></a>
+<a href="https://mukkysworld.neocities.org/"><img src="assets/buttons/mukky.gif"></a>
+<a href="https://bleu.nekoweb.org/"> <img src="https://files.catbox.moe/ofivcj.gif" /> </a>
+<a href="https://kittyvomit.nekoweb.org/"><img src="https://kittyvomit.nekoweb.org/8831/kitvom/kitvom2.gif"> </a>
+<a href="https://nepeta.pet/"><img src="assets/buttons/nepeta.gif"> </a>
+<a href="mybuttons.html#special"><img src="assets/art/FTSbutton/full.png"> </a>
+<a href="https://virtualobserver.moe"><img src="assets/buttons/virtualobserver.png"> </a>
 <a class=' emptbutt'></a>
 <a class=' emptbutt'></a>
 <a class=' emptbutt'></a>
