--- a/games.html
+++ b/games.html
@@ -155,7 +155,7 @@
 <a class='links' href='https://smm2.wizul.us/smm2/maker/VSN-FFS-FDG/uploaded-courses'>mario maker 2 levels </a>
 <!--<a class='links' href='https://smm2.wizul.us/smm2/maker/VSN-FFS-FDG/uploaded-courses'>mario maker 2 levels </a>-->
 
-<div style='background-image: url("assets/art/FTSbutton/bg.png"); width: 88px; height: 31px; position:relative;'>
+<div style='background-image: url("assets/art/FTSbutton/BG.png"); width: 88px; height: 31px; position:relative;'>
 <script>
 function Find8831(theSilver){
     theSilver.style.top = `${1+Math.round(Math.random()*15)}px`;
