--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,8 @@
 <h3> HAIII </h3>
 <br>
-miaaa@duck.com &lt;--- thats my email :3
+miaaa AT duck.com &lt;--- thats my email rn :3
 <br><br>
 <a href='aboutthem.html'> &lt;&lt;&lt; BACK </a>
+<br>
+<br>
+NOTE: this contents page are subject to change at any time, if you want my current contact information, please go here first :p
