--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,6 @@
 <h3> HAIII </h3>
 <br>
-miaaa AT duck.com &lt;--- thats my email rn :3
+|||||||||||||||||||||| &lt;--- thats my email rn :3
 <br><br>
 <a href='aboutthem.html'> &lt;&lt;&lt; BACK </a>
 <br>
