--- a/contact.html
+++ b/contact.html
@@ -2,9 +2,11 @@
 
 <h3> HAIII </h3>
 <br>
-|||||||||||||||||||||| &lt;--- thats my email rn :3
+my email is:<br>
+~~ admin at sinister dot gay ~~<br>
+(i will likely reply with a different email address)
 <br><br>
-<a href='aboutthem.html'> &lt;&lt;&lt; BACK </a>
+<a href='aboutme.html'> &lt;&lt;&lt; BACK </a>
 <br>
 <br>
 NOTE: this contents page are subject to change at any time, if you want my current contact information, please go here first :p
